# brainfucktranspiler

./: blog.md  codegen.py  pyproject.toml
brainfucktranspiler/: codegen.py  interpreter.py  test_codegen.py  test_euler_1.py  test_interpreter.py
