[tool.poetry]
name = "brainfucktranspiler"
version = "0.1.0"
description = "Transpiler, code generator and interpreter for Brainfuck"
authors = ["Martin Ueding <mu@martin-ueding.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
